# guidelines

./: LICENSE  README.adoc
.github/workflows/: cpp_analyzer.yaml  gh-pages.yml
active/: guidelines_standard.adoc
draft/: cpp_styleguide.adoc  python_styleguide.adoc
published/: guidelines_standard_v0-1-0.adoc
tools/: shell.nix
tools/cpp_code_analyzer/: Cargo.toml
tools/cpp_code_analyzer/src/: ast.rs  checker.rs  fix.rs  lib.rs  main.rs  parser.rs  visualize.rs
tools/cpp_code_analyzer/src/fix/: derive_interface.rs  mod.rs
tools/cpp_code_analyzer/tests/: abstract_interfaces.rs  derived_classes.rs  fixes.rs  global_variables.rs  graph.rs  test_traverse_cpp_structure.rs  tests.rs
tools/nix/: sources.json
