[package]
name = "cpp_code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
codespan-reporting = "0.12"
#clang-ast = "0.1"
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"

[build-dependencies]
cc="*"

[dev-dependencies]
pretty_assertions = "1"
