[package]
name = "cpp_code_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
codespan-reporting = "0.12"
tree-sitter = "0.25"
tree-sitter-cpp = "0.23"
layout-rs = "0.1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
pretty_assertions = "1"
